# CoreGame

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Doxyfile  README.md  update_version.sh
CoreGame/: CoreGame.h
CoreGame/include/: CoreGame_Utils.h
acow/: game_goodies.h
acow/include/: Status.h  Version.h
acow/src/: Status.cpp
docs/: CHANGELOG.txt  Doxyfile  mainpage.dox  site_info
include/: CoreGame.h  CoreGame_Macros.h  CoreGame_Memory.h  CoreGame_Utils.h  Log.h  MathUtils.h  Status.h  StringUtils.h
include/Macros/: CoreGame_Assert.h  CoreGame_Callbacks.h  CoreGame_Disallow.h  CoreGame_OnlyInDebug.h  CoreGame_Singleton.h  CoreGame_Verify.h
scripts/: update_version.sh
site_info/: info
src/: GameCore_Macros.cpp  Log.cpp  Status.cpp  StringUtils.cpp
